Fixed minor alignment issues in user details

--- a/src/app/admin/users/user-details/user-details.component.scss
+++ b/src/app/admin/users/user-details/user-details.component.scss
@@ -1,6 +1,10 @@
-.btn {
+.btn-save {
   margin-bottom: 8px;
   margin-top: 8px;
+}
+
+.form-inline label {
+  margin-bottom: 0.5rem;
 }
 
 .breadcrumb {
